[FIX] Spacing of user input data

--- a/Hair Day/css/booking-styles.css
+++ b/Hair Day/css/booking-styles.css
@@ -57,8 +57,6 @@ form input{
     border: none;
     border-radius: 2em;
 
-    margin: 0.8em 0 0 0;
-
     background-color: var(--secondary-color);
 
     /* %  width will change according to its parent when adjusting viewport */
@@ -66,16 +64,23 @@ form input{
     width: 25em;
     height: 2.6em;
 
+    margin: 0.8em 0 0 0;
+    padding: 0 0 0 2em;
+
 
 }
 
 form input::placeholder{
     text-align: left;
-    padding-left: 1em;
+    /* padding-left: 1em; */
     color: var(--primary-color);
 }
 
 form input[id="services"]::placeholder{
+    text-align: center;
+}
+
+form input[id="services"]{
     text-align: center;
 }
 
